<resources>
    <string name="app_name">BayShop MF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="server_client_id" translatable="false">675996002572-a8ubjajrhundd08o76cipt37l9ngeqqh.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">1448296545440676</string>
    <string name="fb_login_protocol_scheme" translatable="false">1448296545440676</string>
    <string name="gde_posylka_api_key" translatable="false">01df6c70b0421d7f62c2764a6f5a831acc874623a731f9eddba9f2eac9b1ae8d55fd8c1a9a737472</string>
    <string name="empty_string" translatable="false"> </string>
    <string name="warehouse_usa">Warehouse in USA</string>
    <string name="in_processing">In processing</string>
    <string name="awaiting_sending">Awaiting sending</string>
    <string name="held_due_to_debt">Held due to debt</string>
    <string name="sent">Sent</string>
    <string name="held_by_customs">Held by Customs</string>
    <string name="local_deposit">At local depot</string>
    <string name="take_to_delivery">Courier delivery</string>
    <string name="received">Received</string>
    <string name="settings">Settings</string>
    <string name="profile_settings">Profile settings</string>
    <string name="payment_history">Payment history</string>
    <string name="account_replenishment">Account replenishment</string>
    <string name="addresses">Addresses</string>
    <string name="shipping_calculator">Shipping calculator</string>
    <string name="contact_us">Help and Support</string>
    <string name="mail_forwarding">MAIL FORWARDING</string>
    <string name="logo">Logo</string>
    <string name="transition_image_view">Logo transition name</string>
    <string name="fill_in_the_declaration">Fill in the declaration</string>
    <string name="check_product">Check product</string>
    <string name="check_in_progress">Checking in progress</string>
    <string name="additional_photo">Additional photo</string>
    <string name="photos_in_progress">Photos in progress</string>
    <string name="tracking">Tracking</string>
    <string name="weight">"Weight &amp; Volume: "</string>
    <string name="date">Date</string>
    <string name="price">Price:</string>
    <string name="check_product_cost">The service costs $8</string>
    <string name="check_product_description">During product checking at the warehouse you allow to open the parcel and remove the original package. If we find the defect, you will receive the automatic notification about it.</string>
    <string name="additional_photo_description">We provide 2 product photos for free. BayShop staff will take them, when the parcel is delivered to the warehouse.\n\nYou can order 8 additional photos if needed.</string>
    <string name="leave_comment">Leave a comment</string>
    <string name="confirm">Confirm</string>
    <string name="warehouse">Warehouse:</string>
    <string name="haveAnAccountText">Don\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="total_price">Total cost:</string>
    <string name="units_quantity">Units quantity</string>
    <string name="product_name">Product name:</string>
    <string name="url_to_the_product">Product URL</string>
    <string name="declaration_alert">It\'s important to fill in all the declaration fields by authentic information for each product</string>
    <string name="general_description">General description</string>
    <string name="add_item">Add fields</string>
    <string name="save">Save</string>
    <string name="awaiting_arrival">Awaiting arrival</string>
    <string name="delete_item">Delete parcel</string>
    <string name="link">Link</string>
    <string name="edit_details">Edit details</string>
    <string name="delete">Delete</string>
    <string name="state_description">You\'ve ordered the extra photos of this incoming parcel. You\'ll be notified when the parcel photos are ready</string>
    <string name="ipad_mini">iPad mini</string>
    <string name="tracking_number">Tracking number:</string>
    <string name="link_to_the_product_ordered_by_you">Link to the product ordered by you:</string>
    <string name="held_by_prohibition">Held by prohibition</string>
    <string name="created_on">"Created: "</string>
    <string name="complete">" completed"</string>
    <string name="cancel">Cancel</string>
    <string name="shipping_address">Shipping address:</string>
    <string name="goods_price">Goods cost:</string>
    <string name="customs_clearance">Customs clearance:</string>
    <string name="shipping_price">Shipping price:</string>
    <string name="parcel_components">Parcel components</string>
    <string name="item">Unit:</string>
    <string name="add_parcel">Add parcel</string>
    <string name="add_awaiting_alert">It\'s important to enter the tracking number, there is no use in parcel processing without it. That\'s alright if you don\'t know the tracking number, your parcel won\'t be lost.</string>
    <string name="add_awaiting_package">Add awaiting parcel</string>
    <string name="enter_valid_email">Please specify a valid email address</string>
    <string name="enter_valid_password">Please enter a 6 digits password</string>
    <string name="unknown_error">Something went wrong</string>
    <string name="three_services">Remember that we have 3 awesome services for each parcel you are going to receive</string>
    <string name="you_can_combine_several_parcels_in_one">You can combine several parcels in one</string>
    <string name="you_can_order_product_checking">You can order product checking</string>
    <string name="and_receive_the_additional_photos">And receive the additional photos</string>
    <string name="in_forming">In forming</string>
    <string name="edit_declaration">Edit declaration</string>
    <string name="log_out">Logout</string>
    <string name="saved_succesfuly">Saved successfully</string>
    <string name="not_suported">Not supported yet</string>
    <string name="specify_all_data">Please provide all data for</string>
    <string name="declaration_saved">Declaration was successfully saved</string>
    <string name="please_enter_description">Please fill in the description of this parcel.</string>
    <string name="hide_comment">Hide the comment</string>
    <string name="cancel_request">Cancel the request</string>
    <string name="total_weight">Total weight:</string>
    <string name="next">Next</string>
    <string name="has_li_ion_battery">Does any of your parcels contain Li-ion battery?</string>
    <string name="first_step">First step</string>
    <string name="list_items">Parcels list</string>
    <string name="addresses_list">Address list</string>
    <string name="details">Details</string>
    <string name="select_method">Select method</string>
    <string name="ok">OK</string>
    <string name="shipping_method">Shipping method</string>
    <string name="please_select_parcels">Select at least one parcel to start.</string>
    <string name="lorem_ipsum"> Lorem ipsum dolor sit amet, fermentum eros vivamus, turpis tempor facilisi libero. Fusce adipiscing ornare, lorem libero massa ipsum velit ac mauris, nec tristique odio, cras morbi augue. Orci porta semper varius ut vel, non purus tincidunt. Sollicitudin dui posuere facilisis posuere, semper mauris quisque, vitae nam lacus, aenean aliquam odio. Dolor diam fringilla molestie et dolor porta, vel nec maecenas sed. A in magna vehicula neque sed, lacus dolor cras malesuada suspendisse euismod. Pede vel curabitur, cras libero morbi sodales venenatis scelerisque </string>
    <string name="select_this_method">Select this method</string>
    <string name="fill_declaration">Fill in the declaration</string>
    <string name="units">Units</string>
    <string name="check_list">Goods list</string>
    <string name="i_am_sure">I\'m sure</string>
    <string name="message_example">Esti uveren in ceea ce faci? Asa iti poti pierde tot ce ai adunat o viata, gindestete ghini…</string>
    <string name="delivery_price">Delivery price:</string>
    <string name="insurance">Insurance\u0020</string>
    <string name="declaration">Declaration filling:</string>
    <string name="you_don_t_have_any_item_yet">You don\'t have any parcels yet</string>
    <string name="select_address">Select address</string>
    <string name="edit_address">Edit</string>
    <string name="local_delivery">Local delivery</string>
    <string name="additional_package">Use additional package ($10)</string>
    <string name="sent_on_user_alert">Sent at user’s request</string>
    <string name="total_shipping_price">Total shipping cost:</string>
    <string name="undo">UNDO</string>
    <string name="item_deleted">Item deleted</string>
    <string name="confirm_deleting">Are you sure you want to delete</string>
    <string name="li_ion">Li-ion battery</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="street_name">Street:</string>
    <string name="city">City:</string>
    <string name="postal_code">Postal code:</string>
    <string name="country">Country:</string>
    <string name="phone_number">Phone number:</string>
    <string name="add_new_address">Add new address</string>
    <string name="search_address">Search address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="country_code">Country calling code</string>
    <string name="enter_first_name">Please enter your First Name</string>
    <string name="enter_last_name">Please enter your Last Name</string>
    <string name="enter_street_name">Please enter your street name and house number</string>
    <string name="enter_country_code">Please select your country calling code</string>
    <string name="enter_phone_number">Please enter your phone number</string>
    <string name="enter_your_first_name">Enter your First Name</string>
    <string name="enter_your_last_name">Enter your Last Name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_a_new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="please_repeat_your_password">Please repeat your password</string>
    <string name="register">Register</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="restore_explain">Enter your email address and we will send you the link to restore your password.</string>
    <string name="restore">Restore</string>
    <string name="restore_password">Restore password</string>
    <string name="email_has_been_sent">Email has been sent.</string>
    <string name="reset_your_password">When you receive your login information, follow the link to reset your password.</string>
    <string name="done">Done</string>
    <string name="usd">USD</string>
    <string name="_0_0">0.0</string>
    <string name="parcels">Parcels</string>
    <string name="inner_mail">Inner mail</string>
    <string name="replenish_your_account">Enter the recharge amount and choose payment method in order to replenish your account</string>
    <string name="recharge_amount">Recharge amount:</string>
    <string name="choose_payment_method">Choose payment method</string>
    <string name="replenish">Replenish account</string>
    <string name="services">Services</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="check_your_internet_connection_and_try_again">Check your internet connection and try again</string>
    <string name="try_again">Try again</string>
</resources>