<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_waitingArrival"
            app:actionLayout="@layout/nav_counter"
            android:checked="true"
            android:title="@string/awaiting_arrival"/>
        <item
            android:id="@+id/nav_inStock"
            app:actionLayout="@layout/nav_counter"
            android:title="@string/warehouse_usa"/>
        <item
            android:id="@+id/nav_parcels"
            app:actionLayout="@layout/nav_counter"
            android:title="@string/parcels"/>
        <item
            android:id="@+id/nav_received"
            app:actionLayout="@layout/nav_counter"
            android:title="@string/received"/>
    </group>

    <item android:title="@string/services">
        <menu>
            <item
                android:id="@+id/nav_paymentHistory"
                android:title="@string/payment_history"/>
            <!--<item-->
                <!--android:id="@+id/nav_accountReplenishment"-->
                <!--android:icon="@mipmap/account_repleshment_24dp"-->
                <!--android:title="@string/account_replenishment"/>-->
            <item
                android:id="@+id/nav_addresses"
                android:title="@string/addresses"/>
            <item
                android:id="@+id/nav_shippingCalculator"
                android:title="@string/shipping_calculator"/>
            <item
                android:id="@+id/nav_contactUs"
                android:title="@string/inner_mail"/>
        </menu>
    </item>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_profileSettings"
                android:title="@string/profile_settings"/>
        </menu>
    </item>
</menu>
