<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <Button
        android:id="@+id/fill_declarationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="start|center_vertical"
        android:text="@string/fill_in_the_declaration"/>

    <Button
        android:id="@+id/check_productButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="start|center_vertical"
        android:text="@string/check_product"/>

    <Button
        android:id="@+id/additional_photoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:gravity="start|center_vertical"
        android:text="@string/additional_photo"/>
</LinearLayout>