<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:context="com.softranger.bayshopmf.ui.auth.RegisterFragment">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:scaleType="centerInside"
            android:layout_marginTop="16dp"
            android:src="@drawable/logo_200x200"/>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/first_name"/>

        <EditText
            android:id="@+id/registerNameInput"
            android:layout_width="match_parent"
            android:nextFocusDown="@+id/registerLastNameInput"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:singleLine="true"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/enter_your_first_name"
            android:inputType="textPersonName"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#b1b1b1"/>

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/last_name"/>

        <EditText
            android:id="@+id/registerLastNameInput"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:singleLine="true"
            android:nextFocusDown="@+id/registerEmailInput"
            android:layout_marginRight="16dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/enter_your_last_name"
            android:inputType="textPersonName"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#b1b1b1"/>

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/registerEmailInput"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:nextFocusDown="@+id/registerPasswordInput"
            android:singleLine="true"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/enter_your_email_address"
            android:inputType="textEmailAddress"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#b1b1b1"/>

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/registerPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:nextFocusDown="@+id/registerConfirmPassword"
            android:singleLine="true"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/enter_a_new_password"
            android:inputType="textPassword"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#b1b1b1"/>

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/confirm_password"/>

        <EditText
            android:id="@+id/registerConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:singleLine="true"
            android:layout_marginRight="16dp"
            android:background="@android:color/white"
            android:hint="@string/please_repeat_your_password"
            android:inputType="textPassword"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#b1b1b1"/>

        <Button
            android:id="@+id/registerConfirmButton"
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/green_button_bg"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/registerProgressBar"
            android:layout_gravity="end"/>
    </LinearLayout>
</ScrollView>