<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.softranger.bayshopmf.ui.services.ReplenishmentFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/replenish_your_account"
        android:id="@+id/textView20"
        android:layout_gravity="center_horizontal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#b1b1b1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="18sp"
            android:text="@string/recharge_amount"
            android:id="@+id/textView38"/>

        <EditText
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:inputType="numberDecimal"
            android:background="@drawable/bordered_rectangle"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:hint="@string/_0_0"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:ems="10"
            android:id="@+id/replenishAmountInput"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/replenishAmountInput"
            android:layout_toLeftOf="@id/replenishAmountInput"
            android:text="@string/usd"
            android:id="@+id/textView39"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#b1b1b1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@color/colorSelection">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/choose_payment_method"
            android:id="@+id/textView40"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#b1b1b1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/replenishmentMethodsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <Button
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/replenish"
            android:id="@+id/button3"
            android:background="@drawable/green_button_bg"
            android:textColor="@android:color/white"
            android:layout_margin="16dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
</LinearLayout>
