<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              android:clickable="true"
              android:gravity="center"
              android:orientation="vertical"
              tools:context="com.softranger.bayshopmf.ui.auth.ForogtPasswordFragment">


    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/forgot_your_password"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/restore_explain"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="16dp"
        android:background="#ededed"/>

    <EditText
        android:id="@+id/restorePasswordEmailInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:background="#ededed"/>

    <Button
        android:id="@+id/forgotRestoreButton"
        style="@style/Base.Widget.AppCompat.ActionButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/green_button_bg"
        android:text="@string/restore"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

    <ProgressBar
        android:id="@+id/restorePasswordProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>
</LinearLayout>
